--- a/color-reader/src/index.css
+++ b/color-reader/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 html {
   height: 100%;
 }
 
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font: 3vw 'Ubuntu', sans-serif;
   height: 100%;
   margin: 0;
   box-sizing: border-box;
