Simplify main component by adding new one - ColorFormat

--- a/color-reader/src/ColorReader/ColorReader.css
+++ b/color-reader/src/ColorReader/ColorReader.css
@@ -17,7 +17,8 @@
 
 .colorFormat {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;  
 }
 
