--- a/color-reader/src/ColorFormat/ColorFormat.css
+++ b/color-reader/src/ColorFormat/ColorFormat.css
@@ -4,3 +4,13 @@
   justify-content: space-evenly;
   align-items: center;  
 }
+
+/* Medium devices (tablets, 768px and down)*/
+@media screen and (max-width: 768px) {
+  .colorFormat {
+    padding: 10px;
+  }
+  button {
+    //width: 0;
+  }
+}
