--- a/color-reader/src/index.css
+++ b/color-reader/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
-html {
+html, #root {
   height: 100%;
 }
 
@@ -12,8 +12,4 @@ body {
   margin: 0;
   box-sizing: border-box;
   transition: background-color 0.5s;
-}
-
-#root {
-  height: 100%;
 }
